trunk/Code/NoFuture/Antlr/HTML/HTMLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Projects\31g\trunk\Code\NoFuture\Antlr\Grammers\HTMLParser.g4 by ANTLR 4.6.4

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace NoFuture.Antlr.Grammers {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.4")]
[System.CLSCompliant(false)]
public partial class HTMLParser : Parser {
	public const int
		HTML_COMMENT=1, HTML_CONDITIONAL_COMMENT=2, XML_DECLARATION=3, CDATA=4, 
		DTD=5, SCRIPTLET=6, SEA_WS=7, SCRIPT_OPEN=8, STYLE_OPEN=9, TAG_OPEN=10, 
		HTML_TEXT=11, TAG_CLOSE=12, TAG_SLASH_CLOSE=13, TAG_SLASH=14, TAG_EQUALS=15, 
		TAG_NAME=16, TAG_WHITESPACE=17, SCRIPT_BODY=18, SCRIPT_SHORT_BODY=19, 
		STYLE_BODY=20, STYLE_SHORT_BODY=21, ATTVALUE_VALUE=22, ATTRIBUTE=23;
	public const int
		RULE_htmlDocument = 0, RULE_htmlElements = 1, RULE_htmlElement = 2, RULE_htmlContent = 3, 
		RULE_htmlAttribute = 4, RULE_htmlAttributeName = 5, RULE_htmlAttributeValue = 6, 
		RULE_htmlTagName = 7, RULE_htmlChardata = 8, RULE_htmlMisc = 9, RULE_htmlComment = 10, 
		RULE_xhtmlCDATA = 11, RULE_dtd = 12, RULE_xml = 13, RULE_scriptlet = 14, 
		RULE_script = 15, RULE_style = 16;
	public static readonly string[] ruleNames = {
		"htmlDocument", "htmlElements", "htmlElement", "htmlContent", "htmlAttribute", 
		"htmlAttributeName", "htmlAttributeValue", "htmlTagName", "htmlChardata", 
		"htmlMisc", "htmlComment", "xhtmlCDATA", "dtd", "xml", "scriptlet", "script", 
		"style"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, "'<'", null, 
		"'>'", "'/>'", "'/'", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", "XML_DECLARATION", "CDATA", 
		"DTD", "SCRIPTLET", "SEA_WS", "SCRIPT_OPEN", "STYLE_OPEN", "TAG_OPEN", 
		"HTML_TEXT", "TAG_CLOSE", "TAG_SLASH_CLOSE", "TAG_SLASH", "TAG_EQUALS", 
		"TAG_NAME", "TAG_WHITESPACE", "SCRIPT_BODY", "SCRIPT_SHORT_BODY", "STYLE_BODY", 
		"STYLE_SHORT_BODY", "ATTVALUE_VALUE", "ATTRIBUTE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "HTMLParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public HTMLParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class HtmlDocumentContext : ParserRuleContext {
		public ScriptletContext[] scriptlet() {
			return GetRuleContexts<ScriptletContext>();
		}
		public ScriptletContext scriptlet(int i) {
			return GetRuleContext<ScriptletContext>(i);
		}
		public ITerminalNode[] SEA_WS() { return GetTokens(HTMLParser.SEA_WS); }
		public ITerminalNode SEA_WS(int i) {
			return GetToken(HTMLParser.SEA_WS, i);
		}
		public XmlContext xml() {
			return GetRuleContext<XmlContext>(0);
		}
		public DtdContext dtd() {
			return GetRuleContext<DtdContext>(0);
		}
		public HtmlElementsContext[] htmlElements() {
			return GetRuleContexts<HtmlElementsContext>();
		}
		public HtmlElementsContext htmlElements(int i) {
			return GetRuleContext<HtmlElementsContext>(i);
		}
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlDocument; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterHtmlDocument(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitHtmlDocument(this);
		}
	}

	[RuleVersion(0)]
	public HtmlDocumentContext htmlDocument() {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_htmlDocument);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					State = 36;
					_errHandler.Sync(this);
					switch (_input.La(1)) {
					case SCRIPTLET:
						{
						State = 34; scriptlet();
						}
						break;
					case SEA_WS:
						{
						State = 35; Match(SEA_WS);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 40;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			}
			State = 42;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==XML_DECLARATION) {
				{
				State = 41; xml();
				}
			}

			State = 48;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					State = 46;
					_errHandler.Sync(this);
					switch (_input.La(1)) {
					case SCRIPTLET:
						{
						State = 44; scriptlet();
						}
						break;
					case SEA_WS:
						{
						State = 45; Match(SEA_WS);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 50;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			}
			State = 52;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==DTD) {
				{
				State = 51; dtd();
				}
			}

			State = 58;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					State = 56;
					_errHandler.Sync(this);
					switch (_input.La(1)) {
					case SCRIPTLET:
						{
						State = 54; scriptlet();
						}
						break;
					case SEA_WS:
						{
						State = 55; Match(SEA_WS);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 60;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
			}
			State = 64;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HTML_COMMENT) | (1L << HTML_CONDITIONAL_COMMENT) | (1L << SCRIPTLET) | (1L << SEA_WS) | (1L << SCRIPT_OPEN) | (1L << STYLE_OPEN) | (1L << TAG_OPEN))) != 0)) {
				{
				{
				State = 61; htmlElements();
				}
				}
				State = 66;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlElementsContext : ParserRuleContext {
		public HtmlElementContext htmlElement() {
			return GetRuleContext<HtmlElementContext>(0);
		}
		public HtmlMiscContext[] htmlMisc() {
			return GetRuleContexts<HtmlMiscContext>();
		}
		public HtmlMiscContext htmlMisc(int i) {
			return GetRuleContext<HtmlMiscContext>(i);
		}
		public HtmlElementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlElements; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterHtmlElements(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitHtmlElements(this);
		}
	}

	[RuleVersion(0)]
	public HtmlElementsContext htmlElements() {
		HtmlElementsContext _localctx = new HtmlElementsContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_htmlElements);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HTML_COMMENT) | (1L << HTML_CONDITIONAL_COMMENT) | (1L << SEA_WS))) != 0)) {
				{
				{
				State = 67; htmlMisc();
				}
				}
				State = 72;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 73; htmlElement();
			State = 77;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 74; htmlMisc();
					}
					} 
				}
				State = 79;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlElementContext : ParserRuleContext {
		public HtmlElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlElement; } }
	 
		public HtmlElementContext() { }
		public virtual void CopyFrom(HtmlElementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PairElementContext : HtmlElementContext {
		public ITerminalNode[] TAG_OPEN() { return GetTokens(HTMLParser.TAG_OPEN); }
		public ITerminalNode TAG_OPEN(int i) {
			return GetToken(HTMLParser.TAG_OPEN, i);
		}
		public HtmlTagNameContext[] htmlTagName() {
			return GetRuleContexts<HtmlTagNameContext>();
		}
		public HtmlTagNameContext htmlTagName(int i) {
			return GetRuleContext<HtmlTagNameContext>(i);
		}
		public ITerminalNode[] TAG_CLOSE() { return GetTokens(HTMLParser.TAG_CLOSE); }
		public ITerminalNode TAG_CLOSE(int i) {
			return GetToken(HTMLParser.TAG_CLOSE, i);
		}
		public HtmlContentContext htmlContent() {
			return GetRuleContext<HtmlContentContext>(0);
		}
		public ITerminalNode TAG_SLASH() { return GetToken(HTMLParser.TAG_SLASH, 0); }
		public HtmlAttributeContext[] htmlAttribute() {
			return GetRuleContexts<HtmlAttributeContext>();
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return GetRuleContext<HtmlAttributeContext>(i);
		}
		public PairElementContext(HtmlElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterPairElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitPairElement(this);
		}
	}
	public partial class NonElementContext : HtmlElementContext {
		public ScriptletContext scriptlet() {
			return GetRuleContext<ScriptletContext>(0);
		}
		public ScriptContext script() {
			return GetRuleContext<ScriptContext>(0);
		}
		public StyleContext style() {
			return GetRuleContext<StyleContext>(0);
		}
		public NonElementContext(HtmlElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterNonElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitNonElement(this);
		}
	}
	public partial class EmptyElementContext : HtmlElementContext {
		public ITerminalNode TAG_OPEN() { return GetToken(HTMLParser.TAG_OPEN, 0); }
		public HtmlTagNameContext htmlTagName() {
			return GetRuleContext<HtmlTagNameContext>(0);
		}
		public ITerminalNode TAG_SLASH_CLOSE() { return GetToken(HTMLParser.TAG_SLASH_CLOSE, 0); }
		public HtmlAttributeContext[] htmlAttribute() {
			return GetRuleContexts<HtmlAttributeContext>();
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return GetRuleContext<HtmlAttributeContext>(i);
		}
		public ITerminalNode TAG_CLOSE() { return GetToken(HTMLParser.TAG_CLOSE, 0); }
		public EmptyElementContext(HtmlElementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterEmptyElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitEmptyElement(this);
		}
	}

	[RuleVersion(0)]
	public HtmlElementContext htmlElement() {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_htmlElement);
		int _la;
		try {
			State = 118;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,14,_ctx) ) {
			case 1:
				_localctx = new PairElementContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 80; Match(TAG_OPEN);
				State = 81; htmlTagName();
				State = 85;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==TAG_NAME) {
					{
					{
					State = 82; htmlAttribute();
					}
					}
					State = 87;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 88; Match(TAG_CLOSE);
				State = 89; htmlContent();
				State = 90; Match(TAG_OPEN);
				State = 91; Match(TAG_SLASH);
				State = 92; htmlTagName();
				State = 93; Match(TAG_CLOSE);
				}
				break;

			case 2:
				_localctx = new EmptyElementContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 95; Match(TAG_OPEN);
				State = 96; htmlTagName();
				State = 100;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==TAG_NAME) {
					{
					{
					State = 97; htmlAttribute();
					}
					}
					State = 102;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 103; Match(TAG_SLASH_CLOSE);
				}
				break;

			case 3:
				_localctx = new EmptyElementContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 105; Match(TAG_OPEN);
				State = 106; htmlTagName();
				State = 110;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==TAG_NAME) {
					{
					{
					State = 107; htmlAttribute();
					}
					}
					State = 112;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 113; Match(TAG_CLOSE);
				}
				break;

			case 4:
				_localctx = new NonElementContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 115; scriptlet();
				}
				break;

			case 5:
				_localctx = new NonElementContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 116; script();
				}
				break;

			case 6:
				_localctx = new NonElementContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 117; style();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlContentContext : ParserRuleContext {
		public HtmlChardataContext[] htmlChardata() {
			return GetRuleContexts<HtmlChardataContext>();
		}
		public HtmlChardataContext htmlChardata(int i) {
			return GetRuleContext<HtmlChardataContext>(i);
		}
		public HtmlElementContext[] htmlElement() {
			return GetRuleContexts<HtmlElementContext>();
		}
		public HtmlElementContext htmlElement(int i) {
			return GetRuleContext<HtmlElementContext>(i);
		}
		public XhtmlCDATAContext[] xhtmlCDATA() {
			return GetRuleContexts<XhtmlCDATAContext>();
		}
		public XhtmlCDATAContext xhtmlCDATA(int i) {
			return GetRuleContext<XhtmlCDATAContext>(i);
		}
		public HtmlCommentContext[] htmlComment() {
			return GetRuleContexts<HtmlCommentContext>();
		}
		public HtmlCommentContext htmlComment(int i) {
			return GetRuleContext<HtmlCommentContext>(i);
		}
		public HtmlContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlContent; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterHtmlContent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitHtmlContent(this);
		}
	}

	[RuleVersion(0)]
	public HtmlContentContext htmlContent() {
		HtmlContentContext _localctx = new HtmlContentContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_htmlContent);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==SEA_WS || _la==HTML_TEXT) {
				{
				State = 120; htmlChardata();
				}
			}

			State = 133;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,18,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 126;
					_errHandler.Sync(this);
					switch (_input.La(1)) {
					case SCRIPTLET:
					case SCRIPT_OPEN:
					case STYLE_OPEN:
					case TAG_OPEN:
						{
						State = 123; htmlElement();
						}
						break;
					case CDATA:
						{
						State = 124; xhtmlCDATA();
						}
						break;
					case HTML_COMMENT:
					case HTML_CONDITIONAL_COMMENT:
						{
						State = 125; htmlComment();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 129;
					_errHandler.Sync(this);
					_la = _input.La(1);
					if (_la==SEA_WS || _la==HTML_TEXT) {
						{
						State = 128; htmlChardata();
						}
					}

					}
					} 
				}
				State = 135;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,18,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlAttributeContext : ParserRuleContext {
		public HtmlAttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlAttribute; } }
	 
		public HtmlAttributeContext() { }
		public virtual void CopyFrom(HtmlAttributeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AssignedAttrContext : HtmlAttributeContext {
		public HtmlAttributeNameContext htmlAttributeName() {
			return GetRuleContext<HtmlAttributeNameContext>(0);
		}
		public ITerminalNode TAG_EQUALS() { return GetToken(HTMLParser.TAG_EQUALS, 0); }
		public HtmlAttributeValueContext htmlAttributeValue() {
			return GetRuleContext<HtmlAttributeValueContext>(0);
		}
		public AssignedAttrContext(HtmlAttributeContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterAssignedAttr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitAssignedAttr(this);
		}
	}
	public partial class EmptyAttrContext : HtmlAttributeContext {
		public HtmlAttributeNameContext htmlAttributeName() {
			return GetRuleContext<HtmlAttributeNameContext>(0);
		}
		public EmptyAttrContext(HtmlAttributeContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterEmptyAttr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitEmptyAttr(this);
		}
	}

	[RuleVersion(0)]
	public HtmlAttributeContext htmlAttribute() {
		HtmlAttributeContext _localctx = new HtmlAttributeContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_htmlAttribute);
		try {
			State = 141;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,19,_ctx) ) {
			case 1:
				_localctx = new AssignedAttrContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 136; htmlAttributeName();
				State = 137; Match(TAG_EQUALS);
				State = 138; htmlAttributeValue();
				}
				break;

			case 2:
				_localctx = new EmptyAttrContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 140; htmlAttributeName();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlAttributeNameContext : ParserRuleContext {
		public ITerminalNode TAG_NAME() { return GetToken(HTMLParser.TAG_NAME, 0); }
		public HtmlAttributeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlAttributeName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterHtmlAttributeName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitHtmlAttributeName(this);
		}
	}

	[RuleVersion(0)]
	public HtmlAttributeNameContext htmlAttributeName() {
		HtmlAttributeNameContext _localctx = new HtmlAttributeNameContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_htmlAttributeName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143; Match(TAG_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlAttributeValueContext : ParserRuleContext {
		public ITerminalNode ATTVALUE_VALUE() { return GetToken(HTMLParser.ATTVALUE_VALUE, 0); }
		public HtmlAttributeValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlAttributeValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterHtmlAttributeValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitHtmlAttributeValue(this);
		}
	}

	[RuleVersion(0)]
	public HtmlAttributeValueContext htmlAttributeValue() {
		HtmlAttributeValueContext _localctx = new HtmlAttributeValueContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_htmlAttributeValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145; Match(ATTVALUE_VALUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlTagNameContext : ParserRuleContext {
		public ITerminalNode TAG_NAME() { return GetToken(HTMLParser.TAG_NAME, 0); }
		public HtmlTagNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlTagName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterHtmlTagName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitHtmlTagName(this);
		}
	}

	[RuleVersion(0)]
	public HtmlTagNameContext htmlTagName() {
		HtmlTagNameContext _localctx = new HtmlTagNameContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_htmlTagName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147; Match(TAG_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HtmlChardataContext : ParserRuleContext {
		public ITerminalNode HTML_TEXT() { return GetToken(HTMLParser.HTML_TEXT, 0); }
		public ITerminalNode SEA_WS() { return GetToken(HTMLParser.SEA_WS, 0); }
		public HtmlChardataContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_htmlChardata; } }
		public override void EnterRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.EnterHtmlChardata(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IHTMLParserListener typedListener = listener as IHTMLParserListener;
			if (typedListener != null) typedListener.ExitHtmlChardata(this);
		}
	}
